fix radio/checkbox alignment, better header font size

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -4,20 +4,22 @@
 @font-size-base: 18px;
 @brand-primary: #D60;
 
+// fix misalignment due to different base font size
+input[type="radio"], input[type="checkbox"] {
+    margin-top: 6px;
+}
+
 .full-width {
     width: 100%;
 }
 
 #header h1 {
-    font-size: @font-size-base;
+    font-size: @font-size-base * 2;
     @media (min-width: @screen-sm-min) {
-        font-size: @font-size-base * 2;
+        font-size: @font-size-base * 3;
         white-space: nowrap;
     }
     @media (min-width: @screen-md-min) {
-        font-size: @font-size-base * 3;
-    }
-    @media (min-width: @screen-lg-min) {
         font-size: @font-size-base * 4;
     }
 }
